# basicmodbus

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  common_utils.cpp  common_utils.h  idataformatter.cpp  idataformatter.h  lgpl3.txt  licence.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbus01.pro  modbus01.pro.user.7eccf75.4.9-pre1  modbus01_cz.ts  modbus_utils.cpp  modbus_utils.h  modbusdataformatter.cpp  modbusdataformatter.h  rtudataformatter.cpp  rtudataformatter.h  ui_mainwindow.h
